# snap-buf

./: Cargo.toml  coverage.sh
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: cursor.rs  lib.rs  test.rs
tests/: tests.rs
