[package]
name = "snap-buf"
version = "0.1.0"
edition = "2021"
keywords = ["buffer","byte-buffer","byte-buffer","cow","mvcc"]
categories = ["no-std","memory-management","data-structures","concurrency"]
authors = ["m-mueller678"]
description = "A copy on write byte buffer for efficient snapshotting"
repository = "https://github.com/m-mueller678/snap-buf"
license = "MIT OR Apache-2.0"
exclude = ["/coverage.sh","rustfmt.toml"]

[dependencies]
array-init="2.1.0"
smallvec = "1.13.2"
itertools = { version = "0.14.0",optional = true }
arbitrary = { version = "1.4.1",optional = true,features = ["derive"] }

[features]
test=["itertools","arbitrary"]
