[package]
name = "snap-buf"
version = "0.2.0"
edition = "2021"
keywords = ["buffer","byte-buffer","byte-buffer","cow","mvcc"]
categories = ["no-std","memory-management","data-structures","concurrency"]
authors = ["m-mueller678"]
description = "A copy on write byte buffer for efficient snapshotting"
repository = "https://github.com/m-mueller678/snap-buf"
license = "MIT OR Apache-2.0"
exclude = ["/coverage.sh","rustfmt.toml"]

[dependencies]
array-init="2.1.0"
smallvec = "1.13.2"
itertools = { version = "0.14.0",optional = true }
arbitrary = { version = "1.4.1",optional = true,features = ["derive"] }
rand = {version = "0.9.0",optional = true,features = ["small_rng"]}
extend = {version = "1.2.0",optional = true}

[features]
test=["dep:itertools","dep:arbitrary","dep:rand","dep:extend"]
